--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -10,7 +10,9 @@
 					%li=msg
 				-# This puts all errors into a list item
 	.form-group
-		= f.input :title,  input_html: { class: 'form-control'}
+		= f.input :image,  input_html: { class: 'form-control'}
+	.form-group
+	= f.input :title,  input_html: { class: 'form-control'}
 	.form-group
 		= f.input :description,  input_html: { class: 'form-control'}
 	
