--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,12 +9,12 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand= link_to "Walsh's Pin Board", root_path
+			.navbar-brand= link_to "Stephanie's Pin Board", root_path
 
 			- if user_signed_in?
 				%ul.nav.navbar-nav.nav.navbar-right
 					%li= link_to "New Pin", new_pin_path
-					%li= link_to "Account", edit_user_registration_path
+					%li= link_to "Account", edit_user_registration_path(current_user)
 					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
 			- else
 				%ul.nav.navbar-nav.nav.navbar-right
