--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,24 +2,32 @@
 
 %html
 %head
+	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	%title Pinboard
 	= stylesheet_link_tag    'application', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags 
 %body
-	%nav.navbar.navbar-default
-		.container
-			.navbar-brand= link_to "Stephanie's Pin Board", root_path
-
-			- if user_signed_in?
-				%ul.nav.navbar-nav.nav.navbar-right
-					%li= link_to "New Pin", new_pin_path
-					%li= link_to "Account", edit_user_registration_path(current_user)
-					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
-			- else
-				%ul.nav.navbar-nav.nav.navbar-right
-					%li= link_to "Sign Up", new_user_registration_path
-					%li= link_to "Sign in", new_user_session_path
+	%nav.navbar.navbar-default{:role => "navigation"}
+		.container-fluid
+			.navbar-header
+				%button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+					%span.sr-only Toggle navigation
+					%span.icon-bar
+					%span.icon-bar
+					%span.icon-bar
+				.navbar-brand= link_to "Stephanie's Pin Board", root_path
+			#bs-example-navbar-collapse-1.collapse.navbar-collapse
+				- if user_signed_in?
+					%ul.nav.navbar-nav.navbar-right
+						%li= link_to "New Pin", new_pin_path
+						%li= link_to "Account", edit_user_registration_path(current_user)
+						%li= link_to "Sign Out", destroy_user_session_path, method: :delete
+				- else
+					%ul.nav.navbar-nav.navbar-right
+						%li= link_to "Sign Up", new_user_registration_path
+						%li= link_to "Sign in", new_user_session_path
 	.container		
 		- flash.each do |name, msg|
 			= content_tag :div, msg, class: "alert alert-info"
