--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
 					%span.icon-bar
 					%span.icon-bar
 					%span.icon-bar
-				.navbar-brand= link_to "Stephanie's Pin Board", root_path
+				.navbar-brand= link_to "Pokemon LOL", root_path
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				- if user_signed_in?
 					%ul.nav.navbar-nav.navbar-right
