--- a/app/views/pins/edit.html.haml
+++ b/app/views/pins/edit.html.haml
@@ -2,7 +2,7 @@
 	.row
 		.panel.panel-default
 			.panel-heading
-				%h1 Edit Pin
+				%h1 Edit Post
 			.panel-body
 				%strong.center Current Image
 				%br/
