--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
 %head
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	%title Pinboard
+	%title Pokemon LOL
 	= stylesheet_link_tag    'application', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags 
@@ -20,17 +20,30 @@
 				.navbar-brand= link_to "Pokemon LOL", root_path
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				- if user_signed_in?
+					%ul.nav.navbar-nav.navbar-left
+						%li= link_to "All Posts", pins_path
+						%li= link_to "All Links", links_path
+
 					%ul.nav.navbar-nav.navbar-right
-						%li= link_to "New Pin", new_pin_path
+						%li.dropdown
+							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
+								Actions
+								%b.caret
+							%ul.dropdown-menu{"role" => "menu"}
+								%li= link_to "New Link Post", new_link_path
+								%li= link_to "New Image Post", new_pin_path
 						%li= link_to "Account", edit_user_registration_path(current_user)
 						%li= link_to "Sign Out", destroy_user_session_path, method: :delete
 				- else
+					%ul.nav.navbar-nav.navbar-left
+						%li= link_to "All Posts"
+						%li= link_to "All Links"
 					%ul.nav.navbar-nav.navbar-right
+						%li= link_to "Pokemon Links", links_path
+						%li= link_to "Pokemon Post"
 						%li= link_to "Sign Up", new_user_registration_path
 						%li= link_to "Sign in", new_user_session_path
 	.container		
 		- flash.each do |name, msg|
 			= content_tag :div, msg, class: "alert alert-info"
 		= yield
-
- 
