--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h2>Edit Your Pin</h2>
+        <h2>Edit Your Account</h2>
       </div>
       <div class="panel-body">
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
