adds structure and basic styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -141,3 +141,11 @@ textarea {
     width: 100% !important;
   }
 }
+
+.link_hr{
+border-bottom: 1px rgb(158, 158, 158) solid;
+}
+
+#list_index{
+	width:80%;
+}
