--- a/app/assets/stylesheets/links.css.scss
+++ b/app/assets/stylesheets/links.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Links controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.links{
+border-bottom: 1px rgb(158, 158, 158) solid;
+}
