--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,14 +1,34 @@
+<div class="container" id="list_index">
 <div class="page-header">
   <h1><a href="<%= @link.url %>" target="_blank"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.email %></small></h1>
 </div>
 
+<div class="center-mobile center-desktop">
 <div class="btn-group">
 	<%= link_to "Visit URL", @link.url, target: "_blank", class: "btn btn-primary" %>
 </div>
+</div>
 
 <% if @link.user == current_user %>
+<div class="center-mobile center-desktop">
 <div class="btn-group">
 	<%= link_to "Edit", edit_link_path(@link), class: "btn btn-default" %>
 	<%= link_to "Destroy", @link, method: :delete, data: {confirm: "Are you sure?" }, class: "btn btn-default" %>
 </div>
+</div>
 <% end %>
+<div class="center-mobile center-desktop">
+<div class="btn-group pull-left" id="show_icons">
+  <%= link_to like_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-thumbs-up"></span>
+    
+    <%= @link.get_upvotes.size %>
+  <% end %>
+  <%= link_to dislike_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-thumbs-down">
+    
+    <%= @link.get_downvotes.size %>
+  <% end %>
+</div>
+</div>
+</div>
