--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -18,8 +18,11 @@
 					.col-md-6
 						.btn-group.pull-right
 							= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
-								%span.glyphicon.glyphicon-heart
+								%span.glyphicon.glyphicon-thumbs-up
 								= @pin.get_upvotes.size
+							= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
+								%span.glyphicon.glyphicon-thumbs-down
+								= @pin.get_downvotes.size								
 							-if user_signed_in? && current_user == @pin.user
 								= link_to "Edit", edit_pin_path, class: "btn btn-default"
 								= link_to "Delete", pin_path, method: :delete, data: {confirm: "Whoa!! Are you sure?"}, class: "btn btn-default"
