adds comments to links

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -31,4 +31,20 @@
   <% end %>
 </div>
 </div>
+<br/>
+<br/>
+<h3 class="comments_title">
+  <%= @link.comments.count %> Comments
+</h3>
+
+<div id="comments">
+  <%= render :partial => @link.comments %>
+</div>
+<%= simple_form_for [@link, Comment.new]  do |f| %>
+  <div class="field">
+    <%= f.text_area :body, class: "form-control", id: "comment-textfield" %>
+  </div>
+  <br>
+  <%= f.submit "Add Comment", class: "btn btn-primary" %>
+<% end %>
 </div>
