--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,16 +9,19 @@
   <%= f.error_notification %>
 
   <div class="form-group">
+    <%= f.input :name, required: false, autofocus: true %>
+  </div>
+  <div class="form-group">
     <%= f.input :email, required: true, autofocus: true %>
   </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
   <div class="form-group">
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+    <%= f.input :New_password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
   </div>
   <div class="form-group">
-    <%= f.input :password_confirmation, required: false %>
+    <%= f.input :New_password_confirmation, required: false %>
   </div>
   <div class="form-group">
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
