--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,9 @@
 			  <%= f.error_notification %>
 
 			  <div class="form-inputs">
+			  <div class="form-group">
+			    <%= f.input :name, required: true, autofocus: true %>
+			  </div>
 			  	<div class="form-group">
 			    <%= f.input :email, required: true, autofocus: true %>
 				</div>
