--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="list_index">
 <div class="page-header">
-  <h1><a href="<%= @link.url %>" target="_blank"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.email %></small></h1>
+  <h1><a href="<%= @link.url %>" target="_blank"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.name %></small></h1>
 </div>
 
 <div class="center-mobile center-desktop">
