fixes commenting deleting on both post

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,4 +184,9 @@ border-bottom: 1px rgb(158, 158, 158) solid;
 
 	#comment-textfield {
     min-height: 100px;
+    margin-top: 25px;
+}
+
+.comments_wrapper{
+	padding-bottom: 10px;
 }
