--- a/app/views/coments/index.html.erb
+++ b/app/views/coments/index.html.erb
@@ -1,31 +1,3 @@
-<p id="notice"><%= notice %></p>
+<h1>Click The Link Below to go home:</h1>
 
-<h1>Listing Coments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Pin</th>
-      <th>Body</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @coments.each do |coment| %>
-      <tr>
-        <td><%= coment.pin_id %></td>
-        <td><%= coment.body %></td>
-        <td><%= coment.user %></td>
-        <td><%= link_to 'Show', coment %></td>
-        <td><%= link_to 'Edit', edit_coment_path(coment) %></td>
-        <td><%= link_to 'Destroy', coment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Coment', new_coment_path %>
+<%= link_to "Home", root_path %>
