--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -20,7 +20,7 @@
 							= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
 								%span.glyphicon.glyphicon-thumbs-up
 								= @pin.get_upvotes.size
-							= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
+							= link_to dislike_pin_path(@pin), method: :put, class: "btn btn-default" do
 								%span.glyphicon.glyphicon-thumbs-down
 								= @pin.get_downvotes.size								
 							-if user_signed_in? && current_user == @pin.user
