--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,10 @@
 @import "bootstrap";
 
 body {
-	background: #E9E9E9;
+    background: #E9E9E9;
+    background-image: image-url("pokemon_lol.png")
+
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -43,6 +46,7 @@ nav {
 #pins {
   margin: 0 auto;
   width: 100%;
+background-color: rgba(248, 248, 248, 0.99);
   .box {
 	  margin: 10px;
 	  width: 350px;
@@ -139,6 +143,7 @@ textarea {
 #pins {
     margin: 0 auto;
     width: 100% !important;
+    background-color: rgba(43, 48, 59, 0.498039);
   }
 }
 
@@ -148,6 +153,7 @@ border-bottom: 1px rgb(158, 158, 158) solid;
 
 #list_index{
 	width:80%;
+	background-color: rgba(248, 248, 248, 0.99);
 }
 
 
@@ -156,6 +162,7 @@ border-bottom: 1px rgb(158, 158, 158) solid;
     @media only screen and (max-width : 768px) {
 	#list_index {
     		width: 100%;
+    		background-color: rgba(248, 248, 248, 0.99);
 	}
 	#show_icons{
     float: none !important;
