adds margin to comment buttom

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -197,3 +197,7 @@ border-bottom: 1px rgb(158, 158, 158) solid;
 .comments_wrapper{
 	padding-bottom: 10px;
 }
+
+#new_comment{
+	    margin-bottom: 25px;
+}
