--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Link</h1>
 
-<%= render 'form' %>
+<div class="col-md-6 col-md-offset-3">
+<div class="row">
+<div class="panel panel-default">
+	<div class="panel-heading">
+<h1>New Link</h1>
+	</div>
+<div class="panel-body">
+	<%= render 'form' %>
 
 <%= link_to 'Back', links_path %>
+</div>
+</div>
+</div>
+</div>
