changes body background and makes image post transparent

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 
 body {
     background: #E9E9E9;
-    background-image: image-url("pokemon_lol.png")
+    background-image: image-url("pokemonlolbackground.png")
 
 
 }
@@ -46,7 +46,6 @@ nav {
 #pins {
   margin: 0 auto;
   width: 100%;
-background-color: rgba(248, 248, 248, 0.99);
   .box {
 	  margin: 10px;
 	  width: 350px;
@@ -143,7 +142,6 @@ textarea {
 #pins {
     margin: 0 auto;
     width: 100% !important;
-    background-color: rgba(43, 48, 59, 0.498039);
   }
 }
 
