--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,6 +23,7 @@
 					%ul.nav.navbar-nav.navbar-left
 						%li= link_to "All Posts", pins_path
 						%li= link_to "All Links", links_path
+						%li= link_to "All Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
@@ -31,8 +32,14 @@
 							%ul.dropdown-menu{"role" => "menu"}
 								%li= link_to "New Link Post", new_link_path
 								%li= link_to "New Image Post", new_pin_path
-						%li= link_to "Account", edit_user_registration_path(current_user)
-						%li= link_to "Sign Out", destroy_user_session_path, method: :delete
+						%li.dropdown
+							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
+								Profile
+								%b.caret
+							%ul.dropdown-menu{"role" => "menu"}
+								%li= link_to "Your Profile", current_user
+								%li= link_to "Edit Your Account", edit_user_registration_path(current_user)
+						%li= link_to "Sign Out", destroy_user_session_path, method: :delete						
 				- else
 					%ul.nav.navbar-nav.navbar-left
 						%li= link_to "All Post", pins_path
