--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,7 @@
 					%ul.nav.navbar-nav.navbar-left
 						%li= link_to "All Post", pins_path
 						%li= link_to "All Links", links_path
+						%li= link_to "All Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li= link_to "Sign Up", new_user_registration_path
 						%li= link_to "Sign in", new_user_session_path
