--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,8 +30,8 @@
 								Actions
 								%b.caret
 							%ul.dropdown-menu{"role" => "menu"}
-								%li= link_to "New Link Post", new_link_path
-								%li= link_to "New Image Post", new_pin_path
+								%li= link_to "Share A Link", new_link_path
+								%li= link_to "New Post", new_pin_path
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
 								Profile
