--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,9 @@
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	%title Pokemon LOL
+	<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="animate.min.css">
+	<link href="hover-min.css" rel="stylesheet" media="all">
 	= stylesheet_link_tag    'application', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags 
@@ -17,13 +20,13 @@
 					%span.icon-bar
 					%span.icon-bar
 					%span.icon-bar
-				.navbar-brand= link_to "Pokemon LOL", root_path
+				.navbar-brand.pixelate.hvr-wobble-skew= link_to "Pokemon LOL", root_path
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				- if user_signed_in?
 					%ul.nav.navbar-nav.navbar-left
-						%li= link_to "All Posts", pins_path
-						%li= link_to "All Links", links_path
-						%li= link_to "All Users", users_path
+						%li.hvr-underline-from-center= link_to "All Posts", pins_path
+						%li.hvr-underline-from-center= link_to "All Links", links_path
+						%li.hvr-underline-from-center= link_to "All Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
@@ -39,15 +42,15 @@
 							%ul.dropdown-menu{"role" => "menu"}
 								%li= link_to "Your Profile", current_user
 								%li= link_to "Edit Your Account", edit_user_registration_path(current_user)
-						%li= link_to "Sign Out", destroy_user_session_path, method: :delete						
+						%li.hvr-underline-from-center= link_to "Sign Out", destroy_user_session_path, method: :delete						
 				- else
 					%ul.nav.navbar-nav.navbar-left
-						%li= link_to "All Post", pins_path
-						%li= link_to "All Links", links_path
-						%li= link_to "All Users", users_path
+						%li.hvr-underline-from-center= link_to "All Post", pins_path
+						%li.hvr-underline-from-center= link_to "All Links", links_path
+						%li.hvr-underline-from-center= link_to "All Users", users_path
 					%ul.nav.navbar-nav.navbar-right
-						%li= link_to "Sign Up", new_user_registration_path
-						%li= link_to "Sign in", new_user_session_path
+						%li.hvr-underline-from-center= link_to "Sign Up", new_user_registration_path
+						%li.hvr-underline-from-center= link_to "Sign in", new_user_session_path
 	.container		
 		- flash.each do |name, msg|
 			= content_tag :div, msg, class: "alert alert-info"
