--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -7,7 +7,7 @@
     </h2>
 
         <div class="btn-group">
-      <a class="btn btn-default btn-sm" href="<%= link.url %>" target="_blank">Visit Link</a>
+      <a class="btn btn-default btn-sm hvr-pop" href="<%= link.url %>" target="_blank">Visit Link</a>
       <%= link_to like_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
         <span class="glyphicon glyphicon-thumbs-up"></span>
         
