--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="well">
 <h1>Editing Link</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @link %> |
 <%= link_to 'Back', links_path %>
+</div>
