--- a/app/views/coments/edit.html.erb
+++ b/app/views/coments/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="well">
 <h1>Editing Coment</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @coment %> |
 <%= link_to 'Back', coments_path %>
+</div>
