--- a/app/views/coments/index.html.erb
+++ b/app/views/coments/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Click The Link Below to go home:</h1>
+<div class="well">
+	<h1 class="pixelate" style="color:#fcca09;">Uh Oh</h1>
+<h2> We aren't showing comments here... <br/>Click The Link Below to go home:</h2>
 
-<%= link_to "Home", root_path %>
+<p class="btn btn-success"><%= link_to "Home", root_path %></p>
+
+</div>
