--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,10 +5,10 @@
 <div class="box panel panel-default">
 	<br/>
 	<%= gravatar_for user, size: 150 %>
-<h3><i class="glyphicon glyphicon-heart"></i>  <%= link_to user.name, user %> <i class="glyphicon glyphicon-heart"></i> </h3>
+<h3><i class="glyphicon glyphicon-heart hvr-pulse-grow"></i>  <%= link_to user.name, user, class: "hvr-grow line_none" %> <i class="glyphicon glyphicon-heart hvr-pulse-grow"></i> </h3>
  
 <div class="panel-body">
-<%= link_to "Click here to Visit", user, class: "btn btn-success btn-lg", type: "btn'" %>
+<%= link_to "Click here to Visit", user, class: "btn btn-success btn-lg hvr-bounce-to-right", type: "btn'" %>
 </div>
 </div>
 <% end %>
