adds username to nav

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -341,3 +341,8 @@ nav.share {
     background-color: #4b6ba6;
     border-color: #4b6ba6;
 }
+
+.user_hi{
+	background-color:#fcca09;
+	text-transform: uppercase;
+}
