adds boilerplate for footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -351,3 +351,11 @@ border: 1px solid rgba(112, 112, 112, 0.02);
 	background-color:#fcca09;
 	text-transform: uppercase;
 }
+
+footer{
+	background-color: #f8f8f8;
+}
+
+#footer_logo a{
+	    color: #fcca09;
+}
