creates footer for website & about/credits page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,9 @@
  text-shadow: -5px -1px 0 #375b9d, 1px -1px 0 #375b9d, -1px 1px 0 #375b9d, 1px 1px 0 #375b9d;
 }
 
-
+html,body{
+    height: 100%
+}
 
 body {
     background: #E9E9E9;
