adds spacing from content and footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -192,6 +192,10 @@ border-bottom: 1px rgb(158, 158, 158) solid;
     		background-color: rgba(248, 248, 248, 0.99);
 	}
 
+	.footer{
+	display:none;
+	}
+
 	#show_icons{
     float: none !important;
   
