--- a/app/views/pages/credits.html.erb
+++ b/app/views/pages/credits.html.erb
@@ -2,6 +2,17 @@
 <h1>Credits</h1>
 <h2>Who Made This App</h2>
 <p>This app was made by Giovani Camara...<br/> Checkout his work at <a href="https://gcamara14.github.io/" target="_blank"> https://gcamara14.github.io/</a></p>
+<p>check me out online:</p>
+<a href="https://github.com/gcamara14" target="_blank"><i class="fa fa-github"></i></a>
+<a href="https://plus.google.com/u/0/100255215998572635764/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+<a href="https://www.instagram.com/llama_lovergio/" target="_blank"><i class="fa fa-instagram"></i></a>
+<a href="https://www.linkedin.com/in/giovanicamara" target="_blank"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.pinterest.com/Giovanicamara/" target="_blank"><i class="fa fa-pinterest"></i></a>
+<a href="https://soundcloud.com/giovanicamara" target="_blank"><i class="fa fa-soundcloud"></i></a>
+<a href="http://giovanicamara.tumblr.com/" target="_blank"><i class="fa fa-tumblr"></i></a>  
+<a href="https://twitter.com/Llama_Lovergio" target="_blank"><i class="fa fa-twitter"></i></a>      
+<a href="https://www.youtube.com/channel/UCQAicRBgxdRPtQqZ1WTFfuw" target="_blank"><i class="fa fa-youtube"></i></a>
+<br/>
 <h2>Other:</h2>
 <p>I do not own &amp; am not affiliated with pokemon in any way or form.</p>
 <p>Shoutout to MonsterMMORP who made this dope pokemon background <a href="http://www.deviantart.com/art/Pokemon-Style-Monster-MMORPG-Map-Central-Plains-259495085" target="_blank"> Click Here To Visit</a></p>
