--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,8 +1,9 @@
-<div class="container" id="list_index">
-<div class="page-header">
-  <h1><a href="<%= @link.url %>" target="_blank"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.name %></small></h1>
+<div class="container animated zoomIn" id="list_index">
+<div class="page-header center-mobile center-desktop title_case">
+  <h1><a href="<%= @link.url %>" target="_blank"><%= @link.title %> <span class="glyphicon glyphicon-link icon_small" aria-hidden="true"></span></a><br> <small>Submitted by <%= @link.user.name %></small></h1>
 </div>
-
+<div class="row">
+  <div class="col-md-8">
 <div class="center-mobile center-desktop">
 <div class="btn-group">
 	<%= link_to "Visit URL", @link.url, target: "_blank", class: "btn btn-primary" %>
@@ -33,6 +34,12 @@
 </div>
 <br/>
 <br/>
+</div>
+<div class="col-md-4 background_img">
+
+  <%= image_tag("pika.png", :alt => "pikachu", :class => "img-responsive pikapee") %>
+  </div>
+</div>
 <h3 class="comments_title">
   <%= @link.comments.count %> Comments
 </h3>
