--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -3,7 +3,7 @@
 		.box.panel.panel-default.hvr-buzz-out
 			= link_to (image_tag pin.image.url), pin
 			.panel-body
-				%h2= link_to pin.title, pin 
+				%h2.title_case= link_to pin.title, pin 
 				%p.user
 				Submitted by
 				= link_to pin.user.name, users_path(@user)
