--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,9 @@
 	= stylesheet_link_tag    'application', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags 
+	%script{:src => "https://www.google.com/jsapi"}
+	%script{:src => "https://www.youtube.com/iframe_api"}
+
 %body
 	%nav.navbar.navbar-default{:role => "navigation"}
 		.container-fluid
