--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
 .background-transparent
-  #users.transitions-enabled
+  #pins.transitions-enabled
     - @users.each do |user|
       .box.panel.panel-default
         %br/
