--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <div class="container">
+  <div class="container ">
     <h1>Share your videos with the world!</h1>
     <p>Click the button below to share your video from YouTube.</p>
     <p>
@@ -9,16 +9,18 @@
 </div>
 
 <% if @videos.any? %>
-  <div class="container">
-    <h1>Latest videos</h1>
 
+  <div class="container ">
+    <div class="well">
+    <h1 class="text-center">Latest videos</h1>
+    </div>
     <div id="player-wrapper"></div>
-
+<div class="transitions-enabled" id="pins">
     <% @videos.in_groups_of(3) do |group| %>
       <div class="row">
         <% group.each do |video| %>
           <% if video %>
-            <div class="col-md-4">
+            <div class=" box">
               <div class="yt_video thumbnail">
                 <%= image_tag "https://img.youtube.com/vi/#{video.uid}/mqdefault.jpg", alt: video.title,
                               class: 'yt_preview img-rounded', :"data-uid" => video.uid %>
@@ -43,6 +45,7 @@
             </div>
           <% end %>
         <% end %>
+        </div>
       </div>
     <% end %>
   </div>
