--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,17 +28,19 @@
 			#bs-example-navbar-collapse-1.collapse.navbar-collapse
 				- if user_signed_in?
 					%ul.nav.navbar-nav.navbar-left
-						%li.hvr-underline-from-center= link_to "All Posts", pins_path
-						%li.hvr-underline-from-center= link_to "All Links", links_path
-						%li.hvr-underline-from-center= link_to "All Users", users_path
+						%li.hvr-underline-from-center= link_to "Posts", pins_path
+						%li.hvr-underline-from-center= link_to "Links", links_path
+						%li.hvr-underline-from-center= link_to "Videos", videos_path
+						%li.hvr-underline-from-center= link_to "Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
 								Actions
 								%b.caret
 							%ul.dropdown-menu{"role" => "menu"}
+								%li= link_to "Share A Pic/Gif", new_pin_path
 								%li= link_to "Share A Link", new_link_path
-								%li= link_to "New Post", new_pin_path
+								%li= link_to "Share A Video", new_video_path
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
 								Profile
@@ -50,9 +52,10 @@
 						%li.hvr-underline-from-center= link_to "Sign Out", destroy_user_session_path, method: :delete						
 				- else
 					%ul.nav.navbar-nav.navbar-left
-						%li.hvr-underline-from-center= link_to "All Post", pins_path
-						%li.hvr-underline-from-center= link_to "All Links", links_path
-						%li.hvr-underline-from-center= link_to "All Users", users_path
+						%li.hvr-underline-from-center= link_to "Posts", pins_path
+						%li.hvr-underline-from-center= link_to "Links", links_path
+						%li.hvr-underline-from-center= link_to "Videos", links_path
+						%li.hvr-underline-from-center= link_to "Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.hvr-underline-from-center= link_to "Sign Up", new_user_registration_path
 						%li.hvr-underline-from-center= link_to "Sign in", new_user_session_path
