fixes masonry on videos page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -568,3 +568,8 @@ div::selection,a::selection,img::selection, small::selection, .btn::selection {
 		}
 	}
 }
+
+
+.container #videos-lol footer{
+	display:none;
+}
