--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,7 +54,7 @@
 					%ul.nav.navbar-nav.navbar-left
 						%li.hvr-underline-from-center= link_to "Posts", pins_path
 						%li.hvr-underline-from-center= link_to "Links", links_path
-						%li.hvr-underline-from-center= link_to "Videos", links_path
+						%li.hvr-underline-from-center= link_to "Videos", videos_path
 						%li.hvr-underline-from-center= link_to "Users", users_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.hvr-underline-from-center= link_to "Sign Up", new_user_registration_path
