--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container" id="videos-lol">
+  <% if user_signed_in? %>
 <div class="jumbotron">
   <div class="container ">
     <h1>Share your videos with the world!</h1>
@@ -8,6 +9,7 @@
     </p>
   </div>
 </div>
+<% end %>
 
 <% if @videos.any? %>
 
