adds votable weight to videos but not working

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -31,7 +31,7 @@
 
                 <div class="caption">
                  <!--  <h5><%= video.title %></h5> -->
-                  <p>Shared by: <br><%= video.user %></p> 
+                  <!--<p>Shared by: <br><%= video.user %></p>  -->
                  <!--  <p>Duration: <br><%= video.duration %></p> -->
                   <p>
                     <%= link_to like_video_path(video), method: :put, class: "btn btn-default" do %>
