--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 
 <div id="collapseOne" class="panel-collapse collapse out text-center" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
-        <p>To Change Your Profile Picture, pleave visit this link <a href="http://gravatar.com" target="_blank">gravatar.com </a> and change your profile picture on that site.</p>
+        <p>To Change Your Profile Picture, pleave visit this linkg <a href="http://gravatar.com" target="_blank">gravatar.com </a> and change your profile picture on that site.</p>
         <p class="text-center"><a class="btn btn-default btn-sm" href="http://gravatar.com" target="_blank">Visit Link</a></p>
       </div>
     </div>
