--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,7 @@
 						%li.hvr-underline-from-center= link_to "Links", links_path
 						%li.hvr-underline-from-center= link_to "Videos", videos_path
 						%li.hvr-underline-from-center= link_to "Users", users_path
+						%li.hvr-underline-from-center= link_to "Pokedex", pages_pokedex_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.dropdown
 							%a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#"}
@@ -56,6 +57,7 @@
 						%li.hvr-underline-from-center= link_to "Links", links_path
 						%li.hvr-underline-from-center= link_to "Videos", videos_path
 						%li.hvr-underline-from-center= link_to "Users", users_path
+						%li.hvr-underline-from-center= link_to "Pokedex", pages_pokedex_path
 					%ul.nav.navbar-nav.navbar-right
 						%li.hvr-underline-from-center= link_to "Sign Up", new_user_registration_path
 						%li.hvr-underline-from-center= link_to "Sign in", new_user_session_path
