--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,15 +5,22 @@
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	%title Pokemon LOL
-	<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-	<link rel="stylesheet" href="animate.min.css">
-	<link href="hover-min.css" rel="stylesheet" media="all">
+	%link{:href => "https://fonts.googleapis.com/css?family=Press+Start+2P", :rel => "stylesheet", :type => "text/css"}/
+	%link{href: "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel: "stylesheet", integrity: "sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin: "anonymous"}
+	%link{:href => "assets/animate.css.scss", :rel => "stylesheet"}/
+	%link{:href => "assets/hover-min.css.scss", :media => "all", :rel => "stylesheet"}/
+	%link{:href => "assets/normalize.css.scss", :rel => "stylesheet", :type => "text/css"}/
+	%link{:href => "assets/demo.css.scss", :rel => "stylesheet", :type => "text/css"}/
+	%link{:href => "assets/component1.css.scss", :rel => "stylesheet", :type => "text/css"}/
+
+
 	= stylesheet_link_tag    'application', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags 
 	%script{:src => "https://www.google.com/jsapi"}
 	%script{:src => "https://www.youtube.com/iframe_api"}
+	%script{:src => "assets/modernizr-2.6.2.min.js"}
+
 
 %body
 	%nav.navbar.navbar-default{:role => "navigation"}
@@ -68,6 +75,31 @@
 		%br
 		%br
 		%br	
+
+		.component
+			%button#cn-button.cn-button +
+			#cn-wrapper.cn-wrapper
+				%ul
+					%li
+						%a{:href => "#{users_path}"}
+							%span.fa.fa-user{"aria-hidden" => "true"}
+					%li
+						%a{:href => "#{videos_path}"}
+							%span.fa.fa-video-camera{"aria-hidden" => "true"}
+					%li
+						%a{:href => "#{pins_path}"}
+							%span.fa.fa-camera{"aria-hidden" => "true"}
+					%li
+						%a{:href => "#{links_path}"}
+							%span.fa.fa-pencil-square{"aria-hidden" => "true"}
+					%li
+						%a{:href => "#{pages_nostalgia_path}"}
+							%span.fa.fa-heart{"aria-hidden" => "true"}
+			#cn-overlay.cn-overlay
+%script{:src => "assets/polyfills.js.coffee"}
+%script{:src => "assets/demo1.js.coffee"}
+%script{:src => "http://tympanus.net/codrops/adpacks/demoad.js"}
+
 	%footer.footer.navbar-bottom
 		.container
 			.row
